--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.2.1"
+  },
+  "dependencies": {
+    "protobufjs": "~6.8.8"
   }
 }
